--- a/myvirtualenv/requirements.txt
+++ b/myvirtualenv/requirements.txt
@@ -1,85 +1,38 @@
+appJar==0.94.0
+astroid==2.0.4
+autopep8==1.4.3
+Babel==2.7.0
+beautifulsoup4==4.7.1
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
+dominate==2.4.0
 Flask==1.1.1
+Flask-Babel==0.12.2
+Flask-Bootstrap==3.3.7.1
+Flask-Table==0.5.0
+idna==2.8
+isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
-absl-py==0.8.0
-adal==1.2.2
-asn1crypto==0.24.0
-astor==0.8.0
-azure-applicationinsights==0.1.0
-azure-common==1.1.23
-azure-loganalytics==0.1.0
-azure-mgmt-iothub==0.5.0
-azure-mgmt-logic==3.0.0
-azure-mgmt-nspkg==3.0.2
-azure-mgmt-servicefabric==0.2.0
-azure-nspkg==3.0.2
-azure-servicebus==0.21.1
-azure-servicefabric==6.3.0.0
-azure-servicemanagement-legacy==0.20.6
-azure-storage-common==1.4.2
-azure-storage-file==1.4.0
-azure-storage-queue==1.4.0
-backcall==0.1.0
-cachetools==3.1.1
-certifi==2019.9.11
-cffi==1.12.3
-chardet==3.0.4
-colorama==0.4.1
-cryptography==2.7
-cycler==0.10.0
-decorator==4.4.0
-gast==0.2.2
-google-api-core==1.14.2
-google-auth==1.6.3
-google-cloud-vision==0.39.0
-google-pasta==0.1.7
-googleapis-common-protos==1.6.0
-grpcio==1.23.0
-h5py==2.9.0
-idna==2.8
-ipython==7.8.0
-ipython-genutils==0.2.0
-isodate==0.6.0
-jedi==0.15.1
-joblib==0.13.2
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
-Markdown==3.1.1
-matplotlib==3.1.1
-msrest==0.6.10
-msrestazure==0.6.1
+mccabe==0.6.1
+nltk==3.4.4
 numpy==1.17.2
-oauthlib==3.1.0
 opencv-contrib-python==4.1.1.26
 opencv-python==4.1.1.26
-parso==0.5.1
-pickleshare==0.7.5
-Pillow==6.1.0
-prompt-toolkit==2.0.9
-protobuf==3.9.1
-pyasn1==0.4.7
-pyasn1-modules==0.2.6
-pycparser==2.19
-Pygments==2.4.2
-PyJWT==1.7.1
-pyparsing==2.4.2
-python-dateutil==2.8.0
+pycodestyle==2.4.0
+pylint==2.1.1
 pytz==2019.2
 requests==2.22.0
-requests-oauthlib==1.2.0
-rsa==4.0
-scikit-learn==0.21.3
-scipy==1.3.1
-six==1.12.0
-sklearn==0.0
-sort==0.1.0
-tensorboard==1.14.0
-termcolor==1.1.0
-traitlets==4.3.2
+rope==0.11.0
+selenium==3.141.0
+six==1.11.0
+soupsieve==1.9.2
 urllib3==1.25.3
-wcwidth==0.1.7
+virtualenv==16.7.5
+visitor==0.1.3
+w3lib==1.21.0
 Werkzeug==0.15.5
-wrapt==1.11.2
+wrapt==1.10.11
